added Test Button to the UI of RobWorkStudio SamplePlugin. Prints: Button 2 Pressed in the terminal when it is pressed

--- a/SamplePlugin/src/SamplePlugin.ui
+++ b/SamplePlugin/src/SamplePlugin.ui
@@ -46,6 +46,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="_btn2">
+        <property name="text">
+         <string>Test Button</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QSpinBox" name="_spinBox"/>
       </item>
       <item>
