added code to load an image of the bottle (to use for feature matching in pose estimation of the bottle) in the initialize()-func. Outcommented code in the poseEstimationSparseStereo()-func that could be used for performing feature matching, but it does not work yet

--- a/SamplePlugin/src/SamplePlugin.ui
+++ b/SamplePlugin/src/SamplePlugin.ui
@@ -48,7 +48,7 @@
       <item>
        <widget class="QPushButton" name="_btn2">
         <property name="text">
-         <string>Test Button</string>
+         <string>Pose Estimation: Sparse Stereo</string>
         </property>
        </widget>
       </item>
