added function for testing the 3d pose estimation with sparse stereo. Currently, the function only loads the bottle frame, moves it along the x-axis, and updates the state of the workspace when pushing the button in the plugin.

--- a/SamplePlugin/src/SamplePlugin.ui
+++ b/SamplePlugin/src/SamplePlugin.ui
@@ -53,6 +53,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="_testSparseStereo3DPose">
+        <property name="text">
+         <string>Test Sparse Stereo Pose Estimation</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QSpinBox" name="_spinBox"/>
       </item>
       <item>
